test/sema/negative/wrong_condition_type.output
wrong_condition_type.impala:2 col 9: error: mismatched types: expected boolean type but found 'i32' as if condition
